# ffsend-api

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  TODO.md  build.rs
examples/: upload.rs
src/: client.rs  config.rs  crypto_stream.rs  io.rs  lib.rs  reader.rs
src/action/: delete.rs  download.rs  exists.rs  info.rs  metadata.rs  mod.rs  params.rs  password.rs  upload.rs  version.rs
src/api/: data.rs  mod.rs  nonce.rs  request.rs  url.rs  version.rs
src/crypto/: api.rs  b64.rs  hdkf.rs  hkdf.rs  key_set.rs  mod.rs  sig.rs
src/file/: info.rs  metadata.rs  mod.rs  remote_file.rs
src/pipe/: mod.rs  pipe.rs  prelude.rs  progress.rs  traits.rs
src/pipe/crypto/: crypt.rs  ece.rs  gcm.rs  mod.rs  prelude.rs  traits.rs
