[package]
name = "ffsend-api"
version = "0.5.1"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://timvisee.com/projects/ffsend"
repository = "https://github.com/timvisee/ffsend-api"
documentation = "https://docs.rs/ffsend-api"
description = "A fully featured Firefox Send API client."
keywords = ["send", "firefox", "api"]
categories = [
    "api-bindings",
    "authentication",
    "cryptography",
    "network-programming",
]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/ffsend-api", branch = "master" }

[lib]
name = "ffsend_api"
path = "src/lib.rs"

[features]
default = ["send2", "send3", "crypto-openssl"]

# Support for Firefox Send v2
send2 = []

# Support for Firefox Send v3
send3 = ["websocket"]

# Crypt: openssl backend
# TODO: stabilize feature name
crypto-openssl = ["openssl", "reqwest/default-tls"]

# Crypt: ring backend
# TODO: stabilize feature name
# TODO: do not depend on openssl
crypto-ring = ["openssl", "ring", "reqwest/rustls-tls"]

[dependencies]
arrayref = "0.3"
base64 = "0.12"
byteorder = "1.3"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.9"
failure = "0.1"
failure_derive = "0.1"
hkdf = "0.8"
hyper = "^0.13" # same as reqwest
mime = "^0.3.7" # same as reqwest
mime_guess = "2.0"
openssl = { version = "0.10", optional = true }
regex = "1.3"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
ring = { version = "0.16", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
time = "0.2"
url = { version = "2.1", features = ["serde"] }
version-compare = "0.0.10"
websocket = { version = "0.24", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
