[package]
name = "ffsend-api"
version = "0.7.3"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://timvisee.com/projects/ffsend"
repository = "https://github.com/timvisee/ffsend-api"
documentation = "https://docs.rs/ffsend-api"
description = "A fully featured Firefox Send API client."
keywords = ["send", "firefox", "api"]
categories = [
    "api-bindings",
    "authentication",
    "cryptography",
    "network-programming",
]
edition = "2018"
build = "build.rs"

[badges]
gitlab = { repository = "timvisee/ffsend-api", branch = "master" }

[lib]
name = "ffsend_api"
path = "src/lib.rs"

[features]
default = ["send3", "crypto-ring"]

# Support for Firefox Send v2
send2 = ["reqwest/multipart"]

# Support for Firefox Send v3
send3 = ["websocket"]

# Crypto: openssl backend
crypto-openssl = ["openssl", "reqwest/default-tls"]

# Crypto: ring backend
crypto-ring = ["ring", "reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
arrayref = "0.3"
base64 = "0.13"
byteorder = "1.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.9"
hkdf = "0.11"
hyper = "^0.14" # same as reqwest
mime = "^0.3.7" # same as reqwest
mime_guess = "2.0"
openssl = { version = "0.10", optional = true }
regex = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = { version = "0.16", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
time = "0.2"
url = { version = "2.1", features = ["serde"] }
version-compare = "0.0.11"
websocket = { version = "0.26", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
